--- a/Documentation/html/class_drzewo.html
+++ b/Documentation/html/class_drzewo.html
@@ -179,7 +179,7 @@ template&lt;typename T &gt; </div>
   </tr>
 </table>
 </div><div class="memdoc">
-<p>Konstruktor z wartością typu T określonego szablonem.<br />
+<p>Konstruktor z parametrem typu T określonego szablonem.<br />
 Tworzy drzewo o rozmiarze 1 i korzeniu o wartości<br />
 podanej jako parametr. </p>
 
